hw06 gradle warning